syntax = "proto3";

package auth;

option go_package = "./proto";

service AuthService {
    rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message GenerateTokenRequest {
    string username = 1;
    string password = 2;
}

message GenerateTokenResponse {
    string token = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string username = 2;
}